# NickTorch

./: .gitignore  CMakeLists.txt  README.md
include/: graph.h  matrix.h  smol_g.h  smol_t.h  type.h
lib/: diff.cpp
src/: graph.cpp  main.cpp  matrix.cpp  smol_g.cpp  smol_t.cpp  type.cpp
